# plugin-template

./: pyproject.toml
src/dashai_plugin_template/: plugin_class.py
