[project]
name = "dashai_plugin_template"
version = "0.0.1"

dependencies = [
  # add plugin dependencies here
]

authors = [
  { name=},
  { email=},
]

description = "DashAI Plugin description"
readme = "README.md"
requires-python = ">=3.8" # DashAI software needs python 3.8 or higher

[project.entry-points.'dashai.plugins']
plugin_name = 'dashai_plugin_template.plugin_class:PluginClass'
# Add all the necessary entrypoint (one per DashAI component)

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"